# YOLOv2-with-Raspberry-Pi

./: CMakeLists.txt
include/: capture.hpp  emergency_stop.hpp  manoeuvre.hpp  yolo.hpp
src/: capture.cpp  main.cpp  yolo.cpp
